tests/conformance/invalid/path-escape/.aigx/files.aigx
<aigx-files>
  <file path="../secret.txt" domain="core">
    <role>Path escapes the repository root</role>
    <check>ARCH-no-deep-imports</check>
  </file>
</aigx-files>
